--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,10 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'forge'
 
 /*
 // for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
@@ -22,10 +22,10 @@ plugins {
 */
 version = "1.0"
 group= "club.sk1er.mods.fullscreen" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "Sk1er Better Fullscreen (1.8+)"
+archivesBaseName = "Sk1er Better Fullscreen (1.7)"
 
 minecraft {
-    version = "1.8.9-11.15.1.1902-1.8.9"
+    version = "1.7.10-10.13.4.1614-1.7.10"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -33,7 +33,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_20"
+    mappings = "stable_12"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
