--- a/build.gradle
+++ b/build.gradle
@@ -80,3 +80,10 @@ processResources
         exclude 'mcmod.info'
     }
 }
+jar {
+    manifest {
+        attributes "FMLCorePlugin": "club.sk1er.mods.fullscreen.FMLLoadingPlugin",
+                "ModSide": "CLIENT",
+                "FMLCorePluginContainsFMLMod": "Yes, yes it does"
+    }
+}
