--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,10 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
+sourceCompatibility = targetCompatibility = 1.8
+
 version = "1.0"
-group= "club.sk1er.mods.fullscreen" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = "club.sk1er.mods.fullscreen" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Sk1er Better Fullscreen (1.7)"
 
 minecraft {
@@ -70,8 +72,9 @@ processResources {
 }
 jar {
     manifest {
-        attributes "FMLCorePlugin": "club.sk1er.mods.fullscreen.FMLLoadingPlugin",
+        attributes "FMLCorePlugin": "club.sk1er.mods.fullscreen.forge.FMLLoadingPlugin",
                 "ModSide": "CLIENT",
-                "FMLCorePluginContainsFMLMod": "Yes, yes it does"
+                "FMLCorePluginContainsFMLMod": "Yes, yes it does",
+                "FMLAT": "fullscreen_at.cfg"
     }
 }
