--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
+
+        flatDir dirs: 'libs'
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
@@ -13,39 +15,30 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-/*
-// for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
-plugins {
-    id "net.minecraftforge.gradle.forge" version "2.0.2"
-}
-*/
 version = "2.0"
-group = "club.sk1er.mods.fullscreen" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = "club.sk1er.mods.fullscreen"
 archivesBaseName = "Sk1er Better Fullscreen (1.8+)"
-sourceCompatibility = targetCompatibility = 1.8
-minecraft {
-    version = "1.8.9-11.15.1.1902-1.8.9"
-    runDir = "run"
 
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not allways work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
+sourceCompatibility = targetCompatibility = 1.8
+
+minecraft {
+    version = "1.8.9-11.15.1.2318-1.8.9"
+    runDir = "run"
     mappings = "stable_22"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    makeObfSourceJar = false
 }
 
 dependencies {
-
-
+    provided files("libs/modcore.jar")
 }
+
 task moveResources {
     doLast {
         ant.move file: "${buildDir}/resources/main",
                 todir: "${buildDir}/classes/java"
     }
 }
+
 moveResources.dependsOn processResources
 classes.dependsOn moveResources
 
@@ -68,6 +61,7 @@ processResources {
     }
     rename '(.+_at.cfg)', 'META-INF/$1'
 }
+
 jar {
     manifest {
         attributes "FMLCorePlugin": "club.sk1er.mods.fullscreen.forge.FMLLoadingPlugin",
